Add meta tag description

--- a/index.html
+++ b/index.html
@@ -3,7 +3,26 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
+    <meta
+      name="description"
+      content="Penmic Podcasts offers easy access solution to podcast hosting with a wide distribution network to a low cost for influencers and small businesses. Join us today!"
+    />
+    <meta
+      property="og:description"
+      content="Penmic Podcasts offers easy access solution to podcast hosting with a wide distribution network to a low cost for influencers and small businesses. Join us today!"
+    />
+    <meta
+      property="twitter:description"
+      content="Penmic Podcasts offers easy access solution to podcast hosting with a wide distribution network to a low cost for influencers and small businesses. Join us today!"
+    />
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Chivo:wght@300;400&display=swap"
+      rel="stylesheet"
+    />
+    <!-- Stylesheets -->
+    <link rel="stylesheet" href="assets/css/normalize.css" />
     <link rel="stylesheet" href="assets/css/style.css" />
     <link
       rel="icon"
