Add background image with overlay

--- a/index.html
+++ b/index.html
@@ -32,9 +32,13 @@
     />
     <title>Penmic Podcasts</title>
   </head>
-  <body>
-    Publish your podcasts everywhere. Upload your audio to Pod with a single
-    click. We’ll then distribute your podcast to Spotify, Apple Podcasts, Google
-    Podcasts, Pocket Casts and more! Request access
+  <body class="body">
+    <main>
+      <section>
+        Publish your podcasts everywhere. Upload your audio to Pod with a single
+        click. We’ll then distribute your podcast to Spotify, Apple Podcasts,
+        Google Podcasts, Pocket Casts and more! Request access
+      </section>
+    </main>
   </body>
 </html>
