Add general html structure and classnames

--- a/index.html
+++ b/index.html
@@ -33,11 +33,24 @@
     <title>Penmic Podcasts</title>
   </head>
   <body class="body">
-    <main>
-      <section>
-        Publish your podcasts everywhere. Upload your audio to Pod with a single
-        click. We’ll then distribute your podcast to Spotify, Apple Podcasts,
-        Google Podcasts, Pocket Casts and more! Request access
+    <main class="wrapper">
+      <div class="logo"><img src="assets/desktop/logo.svg" alt="Logo" /></div>
+      <section class="content">
+        <h1 class="content__title">
+          Publish your podcasts
+          <span class="content__title--span">everywhere.</span>
+        </h1>
+        <p class="content__parapgraph">
+          Upload your audio to Pod with a single click. We’ll then distribute
+          your podcast to Spotify, Apple Podcasts, Google Podcasts, Pocket Casts
+          and more!
+        </p>
+        <div class="action">
+          <form>
+            <input type="email" id="email" name="email" placeholder="Email" />
+            <button type="submit" role="submit">Request access</button>
+          </form>
+        </div>
       </section>
     </main>
   </body>
