Add and styled input field and button

--- a/index.html
+++ b/index.html
@@ -46,9 +46,17 @@
           and more!
         </p>
         <div class="action">
-          <form>
-            <input type="email" id="email" name="email" placeholder="Email" />
-            <button type="submit" role="submit">Request access</button>
+          <form class="action__form">
+            <input
+              class="action__email"
+              type="email"
+              id="email"
+              name="email"
+              placeholder="Email"
+            />
+            <button class="action__btn" type="submit" role="submit">
+              Request access
+            </button>
           </form>
         </div>
       </section>
