--- a/index.html
+++ b/index.html
@@ -34,17 +34,48 @@
   </head>
   <body class="body">
     <main class="wrapper">
+      <!-- Logo -->
       <div class="logo"><img src="assets/desktop/logo.svg" alt="Logo" /></div>
+      <!-- Text content -->
       <section class="content">
         <h1 class="content__title">
           Publish your podcasts
           <span class="content__title--span">everywhere.</span>
         </h1>
-        <p class="content__parapgraph">
+        <p class="content__paragraph">
           Upload your audio to Pod with a single click. We’ll then distribute
           your podcast to Spotify, Apple Podcasts, Google Podcasts, Pocket Casts
           and more!
         </p>
+        <!-- Icons -->
+        <div class="content__links">
+          <ul class="content__links--list">
+            <li class="spotify">
+              <a>
+                <img src="assets/desktop/spotify.svg" alt="Spotify logo" />
+              </a>
+            </li>
+            <li class="apple">
+              <a>
+                <img src="assets/desktop/apple-podcast.svg" alt="Apple icon" />
+              </a>
+            </li>
+            <li class="google">
+              <a>
+                <img
+                  src="assets/desktop/google-podcasts.svg"
+                  alt="Google icon"
+                />
+              </a>
+            </li>
+            <li class="pocket">
+              <a>
+                <img src="assets/desktop/pocket-casts.svg" alt="Pocketcast" />
+              </a>
+            </li>
+          </ul>
+        </div>
+        <!-- Form -->
         <div class="action">
           <form class="action__form">
             <input
