--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
-      href="https://fonts.googleapis.com/css2?family=Chivo:wght@300;400&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Chivo:wght@300;400;700&display=swap"
       rel="stylesheet"
     />
     <!-- Stylesheets -->
@@ -83,7 +83,7 @@
               type="email"
               id="email"
               name="email"
-              placeholder="Email"
+              placeholder="Email address"
             />
             <button class="action__btn" type="submit" role="submit">
               Request access
