Positioned img links and styled with opacity

--- a/index.html
+++ b/index.html
@@ -50,27 +50,40 @@
         <!-- Icons -->
         <div class="content__links">
           <ul class="content__links--list">
-            <li class="spotify">
-              <a>
-                <img src="assets/desktop/spotify.svg" alt="Spotify logo" />
-              </a>
-            </li>
-            <li class="apple">
-              <a>
-                <img src="assets/desktop/apple-podcast.svg" alt="Apple icon" />
-              </a>
-            </li>
-            <li class="google">
+            <li>
               <a>
                 <img
+                  class="spotify"
+                  src="assets/desktop/spotify.svg"
+                  alt="Spotify logo"
+                />
+              </a>
+            </li>
+            <li>
+              <a>
+                <img
+                  class="apple"
+                  src="assets/desktop/apple-podcast.svg"
+                  alt="Apple icon"
+                />
+              </a>
+            </li>
+            <li>
+              <a>
+                <img
+                  class="google"
                   src="assets/desktop/google-podcasts.svg"
                   alt="Google icon"
                 />
               </a>
             </li>
-            <li class="pocket">
+            <li>
               <a>
-                <img src="assets/desktop/pocket-casts.svg" alt="Pocketcast" />
+                <img
+                  class="pocket"
+                  src="assets/desktop/pocket-casts.svg"
+                  alt="Pocketcast"
+                />
               </a>
             </li>
           </ul>
