Add breakpoint 768px, add and positioned background image

--- a/index.html
+++ b/index.html
@@ -33,6 +33,21 @@
     <title>Penmic Podcasts</title>
   </head>
   <body class="body">
+    <div class="image">
+      <picture>
+        <source
+          srcset="assets/tablet/ezgif.com-gif-maker.webp"
+          media="(min-width:768px)"
+          alt="Man in studio"
+        />
+        <source
+          srcset="assets/desktop/ezgif.com-gif-maker.webp"
+          media="(min-width: 1440px)"
+          alt="Man in studio"
+        />
+        <img src="assets/tablet/ezgif.com-gif-maker.webp" alt="Man in studio" />
+      </picture>
+    </div>
     <main class="wrapper">
       <!-- Logo -->
       <div class="logo"><img src="assets/desktop/logo.svg" alt="Logo" /></div>
