Add combination input field/button in breakpoint tablet

--- a/index.html
+++ b/index.html
@@ -62,6 +62,21 @@
           your podcast to Spotify, Apple Podcasts, Google Podcasts, Pocket Casts
           and more!
         </p>
+        <!-- Form field in large devices -->
+        <div class="combination">
+          <form>
+            <input
+              class="combination__email"
+              type="email"
+              id="email"
+              name="email"
+              placeholder="Email address"
+            />
+            <button class="combination__btn" type="submit">
+              Request access
+            </button>
+          </form>
+        </div>
         <!-- Icons -->
         <div class="content__links">
           <ul class="content__links--list">
