--- a/index.html
+++ b/index.html
@@ -134,6 +134,9 @@
           </form>
         </div>
       </section>
+      <div class="dots">
+        <img src="assets/desktop/bg-pattern-dots.svg" alt="Multiple dots" />
+      </div>
     </main>
   </body>
 </html>
