--- a/index.html
+++ b/index.html
@@ -53,70 +53,72 @@
       <div class="logo"><img src="assets/desktop/logo.svg" alt="Logo" /></div>
       <!-- Text content -->
       <section class="content">
-        <h1 class="content__title">
-          Publish your podcasts
-          <span class="content__title--span">everywhere.</span>
-        </h1>
-        <p class="content__paragraph">
-          Upload your audio to Pod with a single click. We’ll then distribute
-          your podcast to Spotify, Apple Podcasts, Google Podcasts, Pocket Casts
-          and more!
-        </p>
-        <!-- Form field in large devices -->
-        <div class="combination">
-          <form>
-            <input
-              class="combination__email"
-              type="email"
-              id="email"
-              name="email"
-              placeholder="Email address"
-            />
-            <button class="combination__btn" type="submit">
-              Request access
-            </button>
-          </form>
-        </div>
-        <!-- Icons -->
-        <div class="content__links">
-          <ul class="content__links--list">
-            <li>
-              <a>
-                <img
-                  class="spotify"
-                  src="assets/desktop/spotify.svg"
-                  alt="Spotify logo"
-                />
-              </a>
-            </li>
-            <li>
-              <a>
-                <img
-                  class="apple"
-                  src="assets/desktop/apple-podcast.svg"
-                  alt="Apple icon"
-                />
-              </a>
-            </li>
-            <li>
-              <a>
-                <img
-                  class="google"
-                  src="assets/desktop/google-podcasts.svg"
-                  alt="Google icon"
-                />
-              </a>
-            </li>
-            <li>
-              <a>
-                <img
-                  class="pocket"
-                  src="assets/desktop/pocket-casts.svg"
-                  alt="Pocketcast"
-                />
-              </a>
-            </li>
-          </ul>
+        <div class="content__box">
+          <h1 class="content__title">
+            Publish your podcasts
+            <span class="content__title--span">everywhere.</span>
+          </h1>
+          <p class="content__paragraph">
+            Upload your audio to Pod with a single click. We’ll then distribute
+            your podcast to Spotify, Apple Podcasts, Google Podcasts, Pocket
+            Casts and more!
+          </p>
+          <!-- Form field in large devices -->
+          <div class="combination">
+            <form>
+              <input
+                class="combination__email"
+                type="email"
+                id="email"
+                name="email"
+                placeholder="Email address"
+              />
+              <button class="combination__btn" type="submit">
+                Request access
+              </button>
+            </form>
+          </div>
+          <!-- Icons -->
+          <div class="content__links">
+            <ul class="content__links--list">
+              <li>
+                <a>
+                  <img
+                    class="spotify"
+                    src="assets/desktop/spotify.svg"
+                    alt="Spotify logo"
+                  />
+                </a>
+              </li>
+              <li>
+                <a>
+                  <img
+                    class="apple"
+                    src="assets/desktop/apple-podcast.svg"
+                    alt="Apple icon"
+                  />
+                </a>
+              </li>
+              <li>
+                <a>
+                  <img
+                    class="google"
+                    src="assets/desktop/google-podcasts.svg"
+                    alt="Google icon"
+                  />
+                </a>
+              </li>
+              <li>
+                <a>
+                  <img
+                    class="pocket"
+                    src="assets/desktop/pocket-casts.svg"
+                    alt="Pocketcast"
+                  />
+                </a>
+              </li>
+            </ul>
+          </div>
         </div>
         <!-- Form -->
         <div class="action">
