Positioned dot image in desktop view. Aligned links toleft, adjusted wrapper height

--- a/index.html
+++ b/index.html
@@ -34,19 +34,10 @@
   </head>
   <body class="body">
     <div class="image">
-      <picture>
-        <source
-          srcset="assets/tablet/ezgif.com-gif-maker.webp"
-          media="(min-width:768px)"
-          alt="Man in studio"
-        />
-        <source
-          srcset="assets/desktop/ezgif.com-gif-maker.webp"
-          media="(min-width: 1440px)"
-          alt="Man in studio"
-        />
-        <img src="assets/tablet/ezgif.com-gif-maker.webp" alt="Man in studio" />
-      </picture>
+      <img src="assets/tablet/ezgif.com-gif-maker.webp" alt="Man in studio" />
+    </div>
+    <div class="image__lg">
+      <img src="assets/desktop/ezgif.com-gif-maker.webp" alt="Man in studio" />
     </div>
     <main class="wrapper">
       <!-- Logo -->
