Add comments to index file and partials

--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
     />
     <title>Penmic Podcasts</title>
   </head>
+
   <body class="body">
+    <!-- Background images -->
     <div class="image">
       <img src="assets/tablet/ezgif.com-gif-maker.webp" alt="Man in studio" />
     </div>
@@ -42,6 +44,7 @@
     <main class="wrapper">
       <!-- Logo -->
       <div class="logo"><img src="assets/desktop/logo.svg" alt="Logo" /></div>
+
       <!-- Text content -->
       <section class="content">
         <div class="content__box">
@@ -54,6 +57,7 @@
             your podcast to Spotify, Apple Podcasts, Google Podcasts, Pocket
             Casts and more!
           </p>
+
           <!-- Form field in large devices -->
           <div class="combination">
             <form>
@@ -69,6 +73,7 @@
               </button>
             </form>
           </div>
+
           <!-- Icons -->
           <div class="content__links">
             <ul class="content__links--list">
@@ -111,6 +116,7 @@
             </ul>
           </div>
         </div>
+
         <!-- Form -->
         <div class="action">
           <form class="action__form">
