Add Js validation to check for correct entered email address

--- a/index.html
+++ b/index.html
@@ -120,6 +120,7 @@
         <!-- Form -->
         <div class="action">
           <form class="action__form">
+            <div id="response"></div>
             <input
               class="action__email"
               type="email"
@@ -127,7 +128,7 @@
               name="email"
               placeholder="Email address"
             />
-            <button class="action__btn" type="submit" role="submit">
+            <button class="action__btn" type="submit" id="button" role="submit">
               Request access
             </button>
           </form>
@@ -137,5 +138,6 @@
         <img src="assets/desktop/bg-pattern-dots.svg" alt="Multiple dots" />
       </div>
     </main>
+    <script src="assets/script/main.js"></script>
   </body>
 </html>
