Js function tested with no errors

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
             <input
               class="action__email"
               type="email"
-              id="email"
+              id="emailField"
               name="email"
               placeholder="Email address"
             />
