Add email validation function to larger screens

--- a/index.html
+++ b/index.html
@@ -64,13 +64,14 @@
               <input
                 class="combination__email"
                 type="email"
-                id="email"
+                id="emailField"
                 name="email"
                 placeholder="Email address"
               />
-              <button class="combination__btn" type="submit">
+              <button class="combination__btn" type="submit" id="button">
                 Request access
               </button>
+              <div id="response"></div>
             </form>
           </div>
 
