Add second id class to second form

--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
             <form>
               <input
                 class="combination__email"
-                type="email"
                 id="emailField"
+                type="email"
                 name="email"
                 placeholder="Email address"
               />
@@ -121,15 +121,15 @@
         <!-- Form -->
         <div class="action">
           <form class="action__form">
-            <div id="response"></div>
+            <div id="reply"></div>
             <input
               class="action__email"
+              id="emailInput"
               type="email"
-              id="emailField"
               name="email"
               placeholder="Email address"
             />
-            <button class="action__btn" type="submit" id="button" role="submit">
+            <button class="action__btn" type="submit" role="submit" id="btn">
               Request access
             </button>
           </form>
