Validated html in W3C validator with no errors

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
               name="email"
               placeholder="Email address"
             />
-            <button class="action__btn" type="submit" role="submit" id="btn">
+            <button class="action__btn" type="submit" id="btn">
               Request access
             </button>
           </form>
