Refactor code and beautifying

--- a/index.html
+++ b/index.html
@@ -59,6 +59,8 @@
           </p>
 
           <!-- Form field in large devices -->
+          <!-- TODO delete one form and change order
+            links and form with flexbox order -->
           <div class="combination">
             <form>
               <input
