Deleted form for large devices, altered design on form for smaller devices to also suit bigger screens and refactor code. Change order of podcast links in larger screens

--- a/index.html
+++ b/index.html
@@ -57,70 +57,52 @@
             your podcast to Spotify, Apple Podcasts, Google Podcasts, Pocket
             Casts and more!
           </p>
+        </div>
 
-          <!-- Form field in large devices -->
-          <!-- TODO delete one form and change order
-            links and form with flexbox order -->
-          <div class="combination">
-            <form>
-              <input
-                class="combination__email"
-                id="emailField"
-                type="email"
-                name="email"
-                placeholder="Email address"
-              />
-              <button class="combination__btn" type="submit" id="button">
-                Request access
-              </button>
-              <div id="response"></div>
-            </form>
-          </div>
-
-          <!-- Icons -->
-          <div class="content__links">
-            <ul class="content__links--list">
-              <li>
-                <a>
-                  <img
-                    class="spotify"
-                    src="assets/desktop/spotify.svg"
-                    alt="Spotify logo"
-                  />
-                </a>
-              </li>
-              <li>
-                <a>
-                  <img
-                    class="apple"
-                    src="assets/desktop/apple-podcast.svg"
-                    alt="Apple icon"
-                  />
-                </a>
-              </li>
-              <li>
-                <a>
-                  <img
-                    class="google"
-                    src="assets/desktop/google-podcasts.svg"
-                    alt="Google icon"
-                  />
-                </a>
-              </li>
-              <li>
-                <a>
-                  <img
-                    class="pocket"
-                    src="assets/desktop/pocket-casts.svg"
-                    alt="Pocketcast"
-                  />
-                </a>
-              </li>
-            </ul>
-          </div>
+        <!-- Icons -->
+        <div class="content__links">
+          <ul class="content__links--list">
+            <li>
+              <a>
+                <img
+                  class="spotify"
+                  src="assets/desktop/spotify.svg"
+                  alt="Spotify logo"
+                />
+              </a>
+            </li>
+            <li>
+              <a>
+                <img
+                  class="apple"
+                  src="assets/desktop/apple-podcast.svg"
+                  alt="Apple icon"
+                />
+              </a>
+            </li>
+            <li>
+              <a>
+                <img
+                  class="google"
+                  src="assets/desktop/google-podcasts.svg"
+                  alt="Google icon"
+                />
+              </a>
+            </li>
+            <li>
+              <a>
+                <img
+                  class="pocket"
+                  src="assets/desktop/pocket-casts.svg"
+                  alt="Pocketcast"
+                />
+              </a>
+            </li>
+          </ul>
         </div>
 
         <!-- Form -->
+        <!-- TODO improve accessability -->
         <div class="action">
           <form class="action__form">
             <div id="reply"></div>
