Moved background images from img tag to css background selector

--- a/index.html
+++ b/index.html
@@ -35,12 +35,8 @@
 
   <body class="body">
     <!-- Background images -->
-    <div class="image">
-      <img src="assets/tablet/ezgif.com-gif-maker.webp" alt="Man in studio" />
-    </div>
-    <div class="image__lg">
-      <img src="assets/desktop/ezgif.com-gif-maker.webp" alt="Man in studio" />
-    </div>
+    <div class="image" role="img" aria-label="[Man in studio]"></div>
+    <div class="image__lg" role="img" aria-label="[Man in studio]"></div>
     <main class="wrapper">
       <!-- Logo -->
       <div class="logo"><img src="assets/desktop/logo.svg" alt="Logo" /></div>
