Extend on description for screenreaders and podcast icons and images

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <div class="image__lg" role="img" aria-label="[Man in studio]"></div>
     <main class="wrapper">
       <!-- Logo -->
-      <div class="logo" aria-hidden="true">
+      <div class="logo" aria-label="[Penmic podcast logo]">
         <img src="assets/desktop/logo.svg" alt="Logo" />
       </div>
 
@@ -57,7 +57,11 @@
           </p>
 
           <!-- Icons -->
-          <div class="content__links" aria-hidden="true">
+          <div
+            class="content__links"
+            aria-label="[Podcast supplier icons]"
+            title="Our podcast suppliers Spotify, Apple, Google and Pocketcasts"
+          >
             <ul class="content__links--list">
               <li>
                 <a>
@@ -112,7 +116,7 @@
                 aria-required="true"
                 placeholder="Email address"
               />
-              <button class="action__btn" type="submit" id="btn">
+              <button class="action__btn" type="submit" value="submit" id="btn">
                 Request access
               </button>
             </form>
