Corrected BEM naming classes

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <div class="content__box">
           <h1 class="content__title">
             Publish your podcasts
-            <span class="content__title--span">everywhere.</span>
+            <span class="content__title__span">everywhere.</span>
           </h1>
           <p class="content__paragraph">
             Upload your audio to Pod with a single click. We’ll then distribute
@@ -62,7 +62,7 @@
             aria-label="[Podcast supplier icons]"
             title="Our podcast suppliers Spotify, Apple, Google and Pocketcasts"
           >
-            <ul class="content__links--list">
+            <ul class="content__links-list">
               <li>
                 <a>
                   <img
