--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
       rel="stylesheet"
     />
     <!-- Stylesheets -->
-    <link rel="stylesheet" href="assets/css/normalize.css" />
-    <link rel="stylesheet" href="assets/css/style.css" />
+    <link rel="stylesheet" href="dist/css/normalize.css" />
+    <link rel="stylesheet" href="dist/css/style.css" />
     <link
       rel="icon"
       type="image/png"
@@ -40,7 +40,7 @@
     <main class="wrapper">
       <!-- Logo -->
       <div class="logo" aria-label="[Penmic podcast logo]">
-        <img src="assets/desktop/logo.svg" alt="Logo" />
+        <img src="../assets/desktop/logo.svg" alt="Logo" />
       </div>
 
       <!-- Text content -->
