--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <main class="wrapper">
       <!-- Logo -->
       <div class="logo" aria-label="[Penmic podcast logo]">
-        <img src="../assets/desktop/logo.svg" alt="Logo" />
+        <img src="assets/desktop/logo.svg" alt="Logo" />
       </div>
 
       <!-- Text content -->
